@@ -1,6 +1,7 @@
 2011-04-09  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* charset.c (load_charset_map): <, not <=, for optimization.
+	* chartab.c (sub_char_table_set_range, char_table_set_range): Likewise.
 
 	* xmenu.c (set_frame_menubar): Allocate smaller local vectors.
 	This also lets GCC 4.6.0 generate slightly better loop code.
